--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
 edition = "2021"
 readme = "README.md"
-name = "stm32-leds"
+name = "stm32f3-leds"
 version = "0.1.0"
 
 [dependencies]
@@ -21,7 +21,7 @@ aux5 = { path = "src/auxiliary" }
 
 # this lets you use `cargo fix`!
 [[bin]]
-name = "stm32-leds"
+name = "stm32f3-leds"
 test = false
 bench = false
 
