--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ cortex-m-rt = "0.7.3"
 cortex-m-semihosting = "0.5.0"
 stm32f3-discovery = { git = "https://github.com/nicolasbauw/stm32f3-discovery", branch = "master" }
 panic-halt = "0.2.0"
-aux5 = { path = "src/auxiliary" }
+aux5 = { path = "auxiliary" }
 
 # Uncomment for the panic example.
 # panic-itm = "0.4.1"
